--- a/index.html
+++ b/index.html
@@ -1435,8 +1435,10 @@
                     <h5 class="mb-3">Connect With Us</h5>
                     <div class="social-icons">
                         <a href="https://www.linkedin.com/in/anandhu-mohan-21925220b" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="https://github.com/Anandhu1228" title="GitHub"><i class="fab fa-github"></i></a>
-                        <a href="mailto:anandhumohan2018@gmail.com?subject=Inquiry%20About%20NOCTUR%20Services&body=Hello%20NOCTUR%20Team," title="Email"><i class="fas fa-envelope"></i></a>                    </div>
+                        <!-- <a href="https://github.com/Anandhu1228" title="GitHub"><i class="fab fa-github"></i></a> -->
+                        <a><i class="fab fa-github"></i></a>
+                        <a href="mailto:anandhumohan2018@gmail.com?subject=Inquiry%20About%20NOCTUR%20Services&body=Hello%20NOCTUR%20Team," title="Email"><i class="fas fa-envelope"></i></a>                    
+                    </div>
                 </div>
             </div>
             <div class="footer-divider"></div>
